# cdc-evaluation-framework

./: .gitignore  .style.yapf  README.md  ingest_transactions_into_table.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: continuous-integration-main.yaml  continuous-integration-pr.yaml  continuous-integration.yaml  on-pr-against-main.yaml  on-push-to-main.yaml  pr-against-main.yaml
sample-data/: kaggle-online-retail-ii-uci.csv
sql/: create-transaction-table-mysql.sql  create-transaction-table-snowflake.sql
sql/kaggle-online-retail-ii-uci/: create-transaction-table-mysql.sql  create-transaction-table-snowflake.sql  set-up-mysql-source.sql  set-up-snowflake-destination.sql
src/cdc_eval/: __init__.py  cdc_eval_cli.py  kaggle_online_retail_ii_uci.py
src/cdc_eval/sample-datasets/: kaggle-online-retail-ii-uci.csv
tests/cdc_eval/: cdc_eval_cli_test.py  kaggle_online_retail_ii_uci_test.py
use-cases/retail/: kaggle-online-retail-ii-uci.py
