[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1,<4"]

[project]
name = "cdc-evaluation-framework"
version = "0.0.1"
authors = [
    {name = "Ricardo Mendes", email = "ricardolsmendes@gmail.com"},
]
description = "A provider-agnostic framework to evaluate ordinary CDC (Change Data Capture) features."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "pandas ~=1.4.1",
    "pymysql ~=1.0.2",
    "sqlalchemy ~=1.4.32",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pylint ~=2.14.0",
    "toml ~=0.10.2",
    "yapf ~=0.32.0",
]

[project.scripts]
cdc-eval = "cdc_eval:main"

[project.urls]
documentation = "https://github.com/ricardolsmendes/cdc-evaluation-framework"
source = "https://github.com/ricardolsmendes/cdc-evaluation-framework"

[tool.flit.module]
name = "cdc_eval"

[tool.pylint]
max-line-length = 88
disable = ["C0103", "C0114", "C0115", "C0116", "R0903", "R0913", "W0105"]

[tool.yapf]
blank_line_before_nested_class_or_def = true
column_limit = 88
