[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1,<4"]

[project]
name = "cdc-evaluation-framework"
version = "0.0.1"
authors = [
    {name = "Ricardo Mendes", email = "ricardolsmendes@gmail.com"},
]
description = "A provider-agnostic framework to evaluate ordinary CDC (Change Data Capture) features."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "pandas ~=1.4.1",
    "pymysql ~=1.0.2",
    "sqlalchemy ~=1.4.32",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pylint ~=2.14.0",
    "pytest-cov ~=3.0.0",
    "toml ~=0.10.2",
    "yapf ~=0.32.0",
]

[project.scripts]
cdc-eval = "cdc_eval:main"

[project.urls]
documentation = "https://github.com/ricardolsmendes/cdc-evaluation-framework"
source = "https://github.com/ricardolsmendes/cdc-evaluation-framework"

[tool.flit.module]
name = "cdc_eval"

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # Variable name doesn't conform to snake_case naming style (invalid-name)
    "C0114", # Missing module docstring (missing-module-docstring)
    "C0115", # Missing class docstring (missing-class-docstring)
    "C0116", # Missing function or method docstring (missing-function-docstring)
    "R0903", # Too few public methods (1/2) (too-few-public-methods)
    "R0913", # Too many arguments (6/5) (too-many-arguments)
    "W0105", # String statement has no effect (pointless-string-statement)
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 35"
norecursedirs = ["./env/*", "./venv/*", "./tests/*"]

[tool.yapf]
blank_line_before_nested_class_or_def = true
column_limit = 88
